typescript/checker/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingClass.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            123,
        ),
        hi: BytePos(
            124,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingClass.ts:11:5
   |
11 | var d: D;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            173,
        ),
        hi: BytePos(
            179,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingClass.ts:14:11
   |
14 | var r3 = d.thing();
   |           ^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            194,
        ),
        hi: BytePos(
            200,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingClass.ts:15:11
   |
15 | var r4 = D.other();
   |           ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            348,
        ),
        hi: BytePos(
            350,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingClass.ts:27:5
   |
27 | var d2: D2<string>;
   |     ^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            412,
        ),
        hi: BytePos(
            418,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingClass.ts:30:12
   |
30 | var r7 = d2.thing('');
   |            ^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            436,
        ),
        hi: BytePos(
            442,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingClass.ts:31:12
   |
31 | var r8 = D2.other(1);
   |            ^^^^^^

